--- a/workflows/edit_eml/edit_otherentities.Rmd
+++ b/workflows/edit_eml/edit_otherentities.Rmd
@@ -13,25 +13,25 @@ eml@dataset@otherEntity[[i]] <- NULL
 If you need to create/update an `otherEntity`, make sure to [publish](#publish-an-object) or [update](#update-an-object) your data object first (if it is not already on the DataONE MN). Then build your `otherEntity`.
 
 ```{r, eval = FALSE}
-otherEntity <- arcticdatautils::pid_to_eml_other_entity(mn, pkg$data[[i]])[[1]]
+otherEntity <- arcticdatautils::pid_to_eml_entity(mn, pkg$data[[i]])[[1]]
 ```
 
 Alternatively, you can build the `otherEntity` of a data object not in your package by simply inputting the data `PID`.
 
 ```{r, eval = FALSE}
-otherEntity <- arcticdatautils::pid_to_eml_other_entity(mn, "your_data_pid")[[1]]
-```
-
-Next, give the `otherEntity` a name and description.
-
-```{r, eval = FALSE}
-otherEntity@entityName <- as("A descriptive name for the data", "entityName")
-otherEntity@entityDescription <- as("A description of the data", "entityDescription")
+otherEntity <- arcticdatautils::pid_to_eml_entity(mn, "your_data_pid", entityName = "Entity Name", entityDescription = "Description about entity")
 ```
 
 The `otherEntity` must then be set to the EML, like so: 
 
 ``` {r, eval = FALSE}
+eml@dataset@otherEntity <- otherEntity
+```
+
+If you have additional `otherEntity`'s in the EML already, you will need to add the new one like this:
+
+```{r, eval = FALSE}
 eml@dataset@otherEntity[[i]] <- otherEntity
 ```
 
+Where `i` is set to the number of existing entities plus one.
