--- a/workflows/edit_data_packages/get_package_and_eml.Rmd
+++ b/workflows/edit_data_packages/get_package_and_eml.Rmd
@@ -5,15 +5,15 @@ To update a package, you must load it into your R environment. After [setting yo
 ``` {r, eval = FALSE}
 rm_pid <- "your_resource_map_pid"
 
-pkg <- arcticdatautils::get_package(mnT,
-                                    rm_pid,
-                                    file_names = TRUE)
+pkg <- get_package(adc_test,
+                   rm_pid,
+                   file_names = TRUE)
 ```
 
 After loading the package, you can also load the EML file into R using the following command:
 
 ``` {r, eval = FALSE}
-eml <- EML::read_eml(dataone::getObject(mnT, pkg$metadata))
+eml <- read_eml(getObject(adc_test, pkg$metadata))
 ```
 
 ```{block, type = 'note'}
@@ -31,7 +31,7 @@ print(rm_pid)</code></pre>
 ``` {r, eval = FALSE, echo = FALSE}
 # Code Used to generate HTML in note above
 rm_pid_original <- "your_original_resource_map_pid"
-all_rm_versions <- arcticdatautils::get_all_versions(mnT, rm_pid_original)
+all_rm_versions <- get_all_versions(adc_test, rm_pid_original)
 rm_pid <- all_rm_versions[length(all_rm_versions)]
 print(rm_pid)
 ```
