--- a/workflows/solr_queries/xample_solr_queries.Rmd
+++ b/workflows/solr_queries/xample_solr_queries.Rmd
@@ -5,8 +5,8 @@ For additional examples and explanations, check out the Apache Lucene [Query Par
 ```{r echo = FALSE, warning = FALSE, message = FALSE}
 library(magrittr)
 
-cn <- dataone::CNode('PROD')
-mn <- dataone::getMNode(cn,'urn:node:ARCTIC')
+cn_prod <- CNode('PROD')
+adc_prod <- getMNode(cn_prod,'urn:node:ARCTIC')
 
 format_query_result <- function(query_result) {
   query_result %>% 
@@ -20,33 +20,33 @@ format_query_result <- function(query_result) {
 ### Find everything
 
 ```{r}
-result <- dataone::query(mn, list(q="*:*",
-                                  fl="*",
-                                  rows="20"),
-                         as = "data.frame")
+result <- query(adc_prod, list(q="*:*",
+                               fl="*",
+                               rows="20"),
+                as = "data.frame")
 ```
 
 ### Query a wildcard expression 
 
 ```{r eval = FALSE}
 #find any id that starts with arctic-data.6
-result <- dataone::query(mn, list(q="id:arctic-data.6*",
-                                  rows="5000"),
-                         as = "data.frame")
+result <- query(adc_prod, list(q="id:arctic-data.6*",
+                               rows="5000"),
+                as = "data.frame")
 ```
 
 ### Query multiple fields 
 
 ```{r eval = FALSE}
-result <- dataone::query(mn, list(q="title:soil*+AND+origin:Ludwig",
-                        rows="5000"),
-                        as = "data.frame")
+result <- query(adc_prod, list(q="title:soil*+AND+origin:Ludwig",
+                               rows="5000"),
+                as = "data.frame")
 ```
 
 ```{r eval = FALSE}
-result <- dataone::query(mn, list(q="title:soil* OR origin:Ludwig",
-                                  rows="5000"),
-                         as = "data.frame")
+result <- query(adc_prod, list(q="title:soil* OR origin:Ludwig",
+                               rows="5000"),
+                as = "data.frame")
 ```
 
 ```{block, type = "note"}
@@ -56,9 +56,9 @@ You can use either spaces or `+` to separate query parameters. When typing queri
 ### Query multiple conditions within one field
 
 ```{r eval = FALSE}
-result <- dataone::query(mn, list(q="title:(soil* AND carbo*)",
-                                  rows="5000"),
-                         as = "data.frame") 
+result <- query(adc_prod, list(q="title:(soil* AND carbo*)",
+                               rows="5000"),
+                as = "data.frame") 
 ```
 
 ### Use NOT in a query
@@ -66,17 +66,17 @@ result <- dataone::query(mn, list(q="title:(soil* AND carbo*)",
 Just add `-` before a query parameter!
 
 ```{r eval = FALSE}
-result <- dataone::query(mn, list(q="title:(soil AND -carbon)",
-                                  rows="5000"),
-                         as = "data.frame")
+result <- query(adc_prod, list(q="title:(soil AND -carbon)",
+                               rows="5000"),
+                as = "data.frame")
 ```
 
 ### Query a coordinating node
 
 ```{r eval = FALSE}
-result <- dataone::query(cn, list(q="title:soil* AND origin:Ludwig",
-                                  rows="5000"),
-                         as = "data.frame")
+result <- query(cn_prod, list(q="title:soil* AND origin:Ludwig",
+                              rows="5000"),
+                as = "data.frame")
 ```
 
 ### Use facets
