--- a/workflows/edit_data_packages/add_a_pre-generated_identifier.Rmd
+++ b/workflows/edit_data_packages/add_a_pre-generated_identifier.Rmd
@@ -4,7 +4,8 @@
 When you pre-generate a UUID or DOI, the change is not automatically reflected in the `packageId` section of the EML. Use the code below to ensure that the EML lines up with the desired identifier: 
 ```{r, eval = FALSE}
 ## Generate DOI and add to EML
-doiPid <- dataone::generateIdentifier(mnT, "DOI")
+# Note that you cannot generate a DOI on test nodes
+doiPid <- generateIdentifier(mn, "DOI")
 eml@packageId <- new("xml_attribute",
                       .Data = doiPid)
 ```
