--- a/training/04_editing_eml_in_R.Rmd
+++ b/training/04_editing_eml_in_R.Rmd
@@ -3,7 +3,8 @@
 
 This chapter is a practical tutorial for using R to read, edit, write, and validate EML documents. Much of the information here can also be found in the vignettes for the R packages used in this section (e.g. the [EML package](https://github.com/ropensci/EML/blob/master/vignettes/creating-EML.Rmd)).
 
-Once you have an [EML file loaded into R](#get-package-and-eml), you can use R to edit it.
+```{r, child = '../workflows/edit_data_packages/get_package_and_eml.Rmd'}
+```
 
 ```{r, child = '../workflows/edit_eml/edit_an_eml_element.Rmd'}
 ```
